force-app/main/default/objects/UserGem__UserGems__c/UserGem__UserGems__c.object-meta.xml
<CustomObject>
    <label>UserGems</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserGems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>