force-app/main/default/objects/UserGem__UserGems__c/fields/UG_Account_Employees__c.field-meta.xml
<CustomField>
    <fullName>UG_Account_Employees__c</fullName>
    <formula>IF(UserGem__CurrentCompanyEmployees__c &lt;=99, &apos;1 - 99&apos;,
IF(UserGem__CurrentCompanyEmployees__c &lt;=499,&apos;100 - 499&apos;,
IF(UserGem__CurrentCompanyEmployees__c &lt;=999, &apos;500 - 999&apos;,
IF(UserGem__CurrentCompanyEmployees__c &lt;=4999, &apos;1000 - 4999&apos;,
IF(UserGem__CurrentCompanyEmployees__c &gt;5000, &apos;5000+&apos;, NULL
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UG Account Employees</label>
    <type>Text</type>
</CustomField>