force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__ApexSkipOwnerUpdate__c.field-meta.xml
<CustomField>
    <fullName>UserGem__ApexSkipOwnerUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApexSkipOwnerUpdate</label>
    <type>Checkbox</type>
</CustomField>