force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__CurrentAccountOpenOpportunities__c.field-meta.xml
<CustomField>
    <fullName>UserGem__CurrentAccountOpenOpportunities__c</fullName>
    <label>Current Account Open Opportunities</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>