force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__CurrentCompanyAddressCity__c.field-meta.xml
<CustomField>
    <fullName>UserGem__CurrentCompanyAddressCity__c</fullName>
    <label>Current Company City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>