force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__CurrentCompanyDomain__c.field-meta.xml
<CustomField>
    <fullName>UserGem__CurrentCompanyDomain__c</fullName>
    <label>Current Company Domain</label>
    <type>Url</type>
</CustomField>