force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__CurrentJobStartedDate__c.field-meta.xml
<CustomField>
    <fullName>UserGem__CurrentJobStartedDate__c</fullName>
    <label>Current Job Started Date</label>
    <type>Date</type>
</CustomField>