force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__CurrentTitle__c.field-meta.xml
<CustomField>
    <fullName>UserGem__CurrentTitle__c</fullName>
    <label>Current Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>