force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__FirstName__c.field-meta.xml
<CustomField>
    <fullName>UserGem__FirstName__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>