force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__PastAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>UserGem__PastAccountOwner__c</fullName>
    <formula>UserGem__PastAccount__r.Owner.LastName &amp; &quot;, &quot; &amp; UserGem__PastAccount__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Account Owner</label>
    <type>Text</type>
</CustomField>