force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__PastLead__c.field-meta.xml
<CustomField>
    <fullName>UserGem__PastLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Past Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>UserGems (Past Lead)</relationshipLabel>
    <relationshipName>UserGemsPastLead</relationshipName>
    <type>Lookup</type>
</CustomField>