force-app/main/default/objects/UserGem__UserGems__c/fields/UserGem__PastLeadStatus__c.field-meta.xml
<CustomField>
    <fullName>UserGem__PastLeadStatus__c</fullName>
    <formula>TEXT(UserGem__PastLead__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Lead Status</label>
    <type>Text</type>
</CustomField>